Fixed the top login button issue where the padding-bottom was too small. But the fix is a style in the html page. This needs to fixed later

--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -87,7 +87,8 @@ body
 }
 .loginButton
 {
-	margin: 10px;
+	margin-top: 10px;
+	padding: 10px 10px 20px 10px;
 }
 /*******************************************************************/
 /* Common Styles */
